Add fix for the production build issues + update Readme

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "rainbow-web-sdk": "^1.71.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
@@ -15,7 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+	"copy": "cp ./node_modules/rainbow-web-sdk/src/vendors-sdk.min.js ./public/ && cp ./productionConfigExample.js ./node_modules/react-scripts/config/webpack.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,5 +31,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "rainbow-web-sdk": "^1.76.0"
   }
 }
