--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"copy": "cp ./node_modules/rainbow-web-sdk/src/vendors-sdk.min.js ./public/ && cp ./productionConfigExample.js ./node_modules/react-scripts/config/webpack.config.js"
+    "copy": "cp ./node_modules/rainbow-web-sdk/src/vendors-sdk.min.js ./public/ && cp ./productionConfigExample.js ./node_modules/react-scripts/config/webpack.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,6 +33,6 @@
     ]
   },
   "devDependencies": {
-    "rainbow-web-sdk": "^1.76.0"
+    "rainbow-web-sdk": "^2.8.1-sts"
   }
 }
